--- a/index.njk
+++ b/index.njk
@@ -26,7 +26,7 @@
 </div>
 </form> 
 
-<button id="button">Submit</button>
+<button id="button" disabled>Submit</button>
 
 <div id="result"></div>
 
