--- a/index.njk
+++ b/index.njk
@@ -53,7 +53,7 @@ const checkboxes = document.querySelectorAll('input[type="checkbox"]');
 
 button.addEventListener('click', () => {
   // Get the checkboxes
-  const checkboxes = document.querySelectorAll('input[type="checkbox"]:checked');
+const checkboxes = Array.from(document.querySelectorAll('input[type="checkbox"]'));
 
   // Convert the NodeList of checkboxes to an array
   const values = Array.from(checkboxes).map(checkbox => checkbox.value);
