--- a/index.njk
+++ b/index.njk
@@ -32,6 +32,23 @@
 
 <div id="result"></div>
 
+<style>
+  input[type="checkbox"] {
+  display: none;
+}
+
+label {
+  display: block;
+  width: 100px;
+  height: 200px;
+  background-color: #cccccc;
+}
+
+label:before {
+  content: "";
+}
+</style>
+
 <script>
 
 const button = document.getElementById('button');
