--- a/index.njk
+++ b/index.njk
@@ -47,6 +47,10 @@ label {
 label:before {
   content: "";
 }
+input[type="checkbox"]:checked + label {
+  background-color: #00ff00;
+}
+
 </style>
 
 <script>
