--- a/index.njk
+++ b/index.njk
@@ -1,4 +1,7 @@
 
+<div id="result"></div>
+<button id="button" disabled>Check</button>
+
 
 <form>
   <div style="display:flex">
@@ -28,9 +31,7 @@
 </div>
 </form> 
 
-<button id="button" disabled>Submit</button>
 
-<div id="result"></div>
 
 <style>
   input[type="checkbox"] {
@@ -42,6 +43,7 @@ label {
   width: 100px;
   height: 200px;
   background-color: #cccccc;
+  margin:3px;
 }
 
 label:before {
