--- a/index.njk
+++ b/index.njk
@@ -86,12 +86,8 @@ input[type="checkbox"]:checked + label {
   // Count the number of checked checkboxes
   const checkedCount = document.querySelectorAll('input[type="checkbox"]:checked').length;
 
-  // If the checkbox is disabled and has the shake class, remove the shake class from the label
-  if (checkbox.disabled && label.classList.contains('shake')) {
-    label.classList.remove('shake');
-  }
   // If the checkbox is not disabled and there are 5 checked boxes, disable the checkbox, add the shake class to the label, and remove the shake class from all other labels
-  else if (!checkbox.disabled && checkedCount === 5) {
+  if (!checkbox.disabled && checkedCount === 5) {
     checkbox.disabled = true;
     label.classList.add('shake');
     const uncheckedLabels = document.querySelectorAll('input[type="checkbox"]:not(:checked) + label');
@@ -103,12 +99,18 @@ input[type="checkbox"]:checked + label {
   else if (!checkbox.disabled && label.classList.contains('shake')) {
     label.classList.remove('shake');
   }
+  // If the checkbox is disabled and there are less than 5 checked boxes, enable the checkbox and remove the shake class from the label
+  else if (checkbox.disabled && checkedCount < 5) {
+    checkbox.disabled = false;
+    label.classList.remove('shake');
+  }
 }
 
 const checkboxElements = document.querySelectorAll('input[type="checkbox"]');
 checkboxElements.forEach(checkbox => {
   checkbox.addEventListener('change', updateCheckboxes);
 });
+
 
 
 //-------
