--- a/index.njk
+++ b/index.njk
@@ -53,6 +53,11 @@ input[type="checkbox"]:checked + label {
   background-color: #00ff00;
 }
 
+input[type="checkbox"]:disabled + label {
+  background-color: black;
+}
+
+
 @keyframes shake {
   0% {
     transform: translateX(0);
