--- a/index.njk
+++ b/index.njk
@@ -83,7 +83,7 @@ input[type="checkbox"]:disabled + label {
 </style>
 
 <script>
- function updateCheckboxes() {
+function updateCheckboxes() {
   // Get the checkbox and label elements
   const checkbox = this;
   const label = document.querySelector(`label[for="${checkbox.id}"]`);
@@ -91,9 +91,12 @@ input[type="checkbox"]:disabled + label {
   // Count the number of checked checkboxes
   const checkedCount = document.querySelectorAll('input[type="checkbox"]:checked').length;
 
-  // If the checkbox is not disabled and there are 5 checked boxes, disable the checkbox, add the shake class to the label, and remove the shake class from all other labels
+  // If the checkbox is not disabled and there are 5 checked boxes, disable all unchecked boxes, add the shake class to the label, and remove the shake class from all other labels
   if (!checkbox.disabled && checkedCount === 5) {
-    checkbox.disabled = true;
+    const uncheckedBoxes = document.querySelectorAll('input[type="checkbox"]:not(:checked)');
+    uncheckedBoxes.forEach(box => {
+      box.disabled = true;
+    });
     label.classList.add('shake');
     const uncheckedLabels = document.querySelectorAll('input[type="checkbox"]:not(:checked) + label');
     uncheckedLabels.forEach(uncheckedLabel => {
@@ -115,6 +118,7 @@ const checkboxElements = document.querySelectorAll('input[type="checkbox"]');
 checkboxElements.forEach(checkbox => {
   checkbox.addEventListener('change', updateCheckboxes);
 });
+
 
 
 
