--- a/index.njk
+++ b/index.njk
@@ -113,6 +113,11 @@ input[type="checkbox"]:disabled + label {
       box.disabled = true;
     });
   }
+    else if (!checkbox.disabled && checkedCount === 5) {
+    box.disabled = true;
+    label.classList.add('shake');
+  }
+}
   // If the checkbox is disabled and there are less than 5 checked boxes, enable the checkbox and remove the shake class from the label
   else if (checkbox.disabled && checkedCount < 5) {
     checkbox.disabled = false;
