--- a/index.njk
+++ b/index.njk
@@ -90,46 +90,35 @@ input[type="checkbox"]:disabled + label {
 
   // Count the number of checked checkboxes
   const checkedCount = document.querySelectorAll('input[type="checkbox"]:checked').length;
-
   // If the checkbox is not disabled and there are 5 checked boxes, disable all unchecked boxes, add the shake class to the label, and remove the shake class from all other labels
-  if (!checkbox.disabled && checkedCount > 5) {
+  if (!checkbox.disabled && checkedCount === 5) {
     const uncheckedBoxes = document.querySelectorAll('input[type="checkbox"]:not(:checked)');
     uncheckedBoxes.forEach(box => {
       box.disabled = true;
     });
+    checkbox.disabled = true;
     label.classList.add('shake');
     const uncheckedLabels = document.querySelectorAll('input[type="checkbox"]:not(:checked) + label');
     uncheckedLabels.forEach(uncheckedLabel => {
       uncheckedLabel.classList.remove('shake');
     });
   }
-  // If the checkbox is not disabled and there are less than 5 checked boxes, remove the shake class from the label
-  else if (!checkbox.disabled && label.classList.contains('shake')) {
+  // If the checkbox is not disabled and there are 4 checked boxes, disable all unchecked boxes and remove the shake class from the label
+  else if (!checkbox.disabled && checkedCount === 4) {
+    const uncheckedBoxes = document.querySelectorAll('input[type="checkbox"]:not(:checked)');
+    uncheckedBoxes.forEach(box => {
+      box.disabled = true;
+    });
     label.classList.remove('shake');
   }
-  // disable all others then reach 5
-  else if (checkedCount === 5) {
-    uncheckedBoxes.forEach(box => {
-      box.disabled = true;
-    });
-  }
-    else if (!checkbox.disabled && checkedCount === 5) {
-    box.disabled = true;
-    label.classList.add('shake');
-    uncheckedBoxes.forEach(box => {
-      box.disabled = true;
-    });
-  }
+// If the checkbox is disabled and there are less than 4 checked boxes, enable the checkbox and remove the shake class from the label
+else if (checkbox.disabled && checkedCount < 4) {
+  checkbox.disabled = false;
+  label.classList.remove('shake');
 }
-  // If the checkbox is disabled and there are less than 5 checked boxes, enable the checkbox and remove the shake class from the label
-  else if (checkbox.disabled && checkedCount < 5) {
-    checkbox.disabled = false;
-    label.classList.remove('shake');
-  }
-  // If the checkbox is disabled and there are already 5 checked boxes, add the shake class to the label
-  else if (checkbox.disabled && checkedCount > 5) {
-    label.classList.add('shake');
-  }
+// If the checkbox is disabled and there are already 4 checked boxes, add the shake class to the label
+else if (checkbox.disabled && checkedCount === 4) {
+  label.classList.add('shake');
 }
 
 const checkboxElements = document.querySelectorAll('input[type="checkbox"]');
