--- a/index.njk
+++ b/index.njk
@@ -83,13 +83,15 @@ input[type="checkbox"]:disabled + label {
 </style>
 
 <script>
-  function updateCheckboxes() {
+ 
+ function updateCheckboxes() {
   // Get the checkbox and label elements
   const checkbox = this;
   const label = document.querySelector(`label[for="${checkbox.id}"]`);
 
   // Count the number of checked checkboxes
   const checkedCount = document.querySelectorAll('input[type="checkbox"]:checked').length;
+
   // If the checkbox is not disabled and there are 5 checked boxes, disable all unchecked boxes, add the shake class to the label, and remove the shake class from all other labels
   if (!checkbox.disabled && checkedCount === 5) {
     const uncheckedBoxes = document.querySelectorAll('input[type="checkbox"]:not(:checked)');
@@ -111,21 +113,25 @@ input[type="checkbox"]:disabled + label {
     });
     label.classList.remove('shake');
   }
-// If the checkbox is disabled and there are less than 4 checked boxes, enable the checkbox and remove the shake class from the label
-else if (checkbox.disabled && checkedCount < 4) {
-  checkbox.disabled = false;
-  label.classList.remove('shake');
-}
-// If the checkbox is disabled and there are already 4 checked boxes, add the shake class to the label
-else if (checkbox.disabled && checkedCount === 4) {
-  label.classList.add('shake');
+  // If the checkbox is not disabled and there are less than 4 checked boxes, remove the shake class from the label
+  else if (!checkbox.disabled && label.classList.contains('shake')) {
+    label.classList.remove('shake');
+  }
+  // If the checkbox is disabled and there are less than 4 checked boxes, enable the checkbox and remove the shake class from the label
+  else if (checkbox.disabled && checkedCount < 4) {
+    checkbox.disabled = false;
+    label.classList.remove('shake');
+  }
+  // If the checkbox is disabled and there are already 4 checked boxes, add the shake class to the label
+  else if (checkbox.disabled && checkedCount === 4) {
+    label.classList.add('shake');
+  }
 }
 
 const checkboxElements = document.querySelectorAll('input[type="checkbox"]');
 checkboxElements.forEach(checkbox => {
   checkbox.addEventListener('change', updateCheckboxes);
 });
-
 
 
 
