--- a/index.njk
+++ b/index.njk
@@ -118,7 +118,7 @@ input[type="checkbox"]:disabled + label {
     label.classList.remove('shake');
   }
   // If the checkbox is disabled and there are less than 4 checked boxes, enable the checkbox and remove the shake class from the label
-  else if (checkbox.disabled && checkedCount < 5) {
+  else if (checkbox.disabled && checkedCount <= 5) {
     checkbox.disabled = false;
     label.classList.remove('shake');
   }
