--- a/index.njk
+++ b/index.njk
@@ -95,7 +95,7 @@ async function displayRecords() {
     const response = await fetch('/.netlify/functions/returnrecords')
     const data = await response.json()
 
-console.log(data);
+console.log(data.results);
 
     // Extract the id and name for each record
     const records = data.results.map(record => ({
