--- a/index.njk
+++ b/index.njk
@@ -94,7 +94,7 @@ async function displayRecords() {
     const response = await fetch('/.netlify/functions/returnrecords')
     const data = await response.json()
 
-console.log(data.results);
+    console.log(data.results)
 
     // Extract the id and name for each record
     const records = data.results.map(record => ({
@@ -112,6 +112,9 @@ console.log(data.results);
       `
       count++
     })
+
+    // Wait for the updateCheckboxes function to finish before continuing
+    await updateCheckboxes()
   } catch (error) {
     console.error(error)
   }
@@ -119,9 +122,6 @@ console.log(data.results);
 
 // Call the displayRecords function on page load
 window.addEventListener('load', displayRecords)
-
-
-
 
  
  function updateCheckboxes() {
