--- a/index.njk
+++ b/index.njk
@@ -4,11 +4,11 @@
 
 ----------
 
-<form id="records"></form>
+<div id="records"></div>
 
 ----------
 
-<!-- 
+
 <form>
   <div style="display:flex">
   <input type="checkbox" id="checkbox1" name="checkbox1" value="1">
@@ -36,7 +36,8 @@
   <label for="checkbox10">10</label><br>
 </div>
 </form> 
--->
+
+
 
 <style>
   input[type="checkbox"] {
@@ -94,7 +95,7 @@ async function displayRecords() {
     const response = await fetch('/.netlify/functions/returnrecords')
     const data = await response.json()
 
-    console.log(data.results)
+console.log(data.results);
 
     // Extract the id and name for each record
     const records = data.results.map(record => ({
@@ -106,15 +107,18 @@ async function displayRecords() {
     const recordsDiv = document.getElementById('records')
     let count = 0
     records.forEach(record => {
+      if (count % 5 === 0) {
+        recordsDiv.innerHTML += '<div style="display:flex">'
+      }
       recordsDiv.innerHTML += `
         <input type="checkbox" id="checkbox${record.id}" name="checkbox${record.id}" value="${record.id}">
         <label for="checkbox${record.id}">${record.name}</label><br>
       `
+      if (count % 5 === 4) {
+        recordsDiv.innerHTML += '</div>'
+      }
       count++
     })
-
-    // Wait for the updateCheckboxes function to finish before continuing
-    await updateCheckboxes()
   } catch (error) {
     console.error(error)
   }
@@ -122,6 +126,9 @@ async function displayRecords() {
 
 // Call the displayRecords function on page load
 window.addEventListener('load', displayRecords)
+
+
+
 
  
  function updateCheckboxes() {
