--- a/index.njk
+++ b/index.njk
@@ -4,11 +4,11 @@
 
 ----------
 
-<div id="records"></div>
+<form id="records"></form>
 
 ----------
 
-
+<!--
 <form>
   <div style="display:flex">
   <input type="checkbox" id="checkbox1" name="checkbox1" value="1">
@@ -36,7 +36,7 @@
   <label for="checkbox10">10</label><br>
 </div>
 </form> 
-
+-->
 
 
 <style>
