--- a/index.njk
+++ b/index.njk
@@ -95,7 +95,7 @@ async function displayRecords() {
     const response = await fetch('/.netlify/functions/returnrecords')
     const data = await response.json()
 
-console.log(data.results);
+    console.log(data.results);
 
     // Extract the id and name for each record
     const records = data.results.map(record => ({
@@ -120,7 +120,7 @@ console.log(data.results);
       count++
     })
 
-    // Call updateCheckboxes() after displayRecords() has completed
+    // Call the updateCheckboxes function here
     updateCheckboxes();
   } catch (error) {
     console.error(error)
