--- a/index.njk
+++ b/index.njk
@@ -195,7 +195,7 @@ async function displayRecords() {
         recordsDiv.innerHTML += '<div style="display:flex">'
       }
       recordsDiv.innerHTML += `
-        <input type="checkbox" id="checkbox${record.id}" name="checkbox${record.id}" value="${record.id}">
+        <input type="checkbox" id="${record.id}" name="checkbox${record.id}" value="${record.id}">
         <label for="checkbox${record.id}">${record.name}</label><br>
       `
       if (count % 5 === 4) {
