--- a/index.njk
+++ b/index.njk
@@ -45,7 +45,9 @@
 }
 
 label {
-  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100px;
   height: 150px;
   background-color: #cccccc;
