--- a/index.njk
+++ b/index.njk
@@ -63,6 +63,7 @@ input[type="checkbox"]:checked + label {
 
 input[type="checkbox"]:disabled + label {
   background-color: black;
+  color: white;
 }
 
 
