--- a/index.njk
+++ b/index.njk
@@ -1,12 +1,8 @@
 
-<div id="result"></div>
+<h1 id="result"></h1>
 <button id="button" disabled>Check</button>
 
-----------
-
 <form id="records" style="display:flex;"></div>
-
-----------
 
 <!--
 <form>
