--- a/index.njk
+++ b/index.njk
@@ -1,6 +1,12 @@
+<header>
+<div class="h_score">
+  <h1 id="result"></h1>
+</div>
+<div class="h_check">
+  <button id="button" disabled>Check</button>
 
-<h1 id="result"></h1>
-<button id="button" disabled>Check</button>
+</div>
+</header>
 
 <form id="records" style="display:flex;"></div>
 
