--- a/css/index.css
+++ b/css/index.css
@@ -117,14 +117,15 @@ code {
 }
 
 /* Header */
-.home {
-  padding: 0 1rem;
-  float: left;
-  margin: 1rem 0; /* 16px /16 */
-  font-size: 1em; /* 16px /16 */
+header {
+  display: flex;
 }
-.home :link:not(:hover) {
-  text-decoration: none;
+
+header button {
+  padding:20px;
+  display: block;
+  width: 100%;
+  
 }
 
 /* Nav */
