--- a/css/index.css
+++ b/css/index.css
@@ -72,9 +72,7 @@ main {
 main :first-child {
   margin-top: 0;
 }
-header {
-  border-bottom: 1px dashed var(--color-gray-20);
-}
+
 header:after {
   content: "";
   display: table;
@@ -119,13 +117,16 @@ code {
 /* Header */
 header {
   display: flex;
+  position: fixed;
+  width: 100%;
+  height: 75px;
 }
 
 header button {
   padding:20px;
   display: block;
   width: 100%;
-  
+
 }
 
 /* Nav */
