--- a/index.njk
+++ b/index.njk
@@ -3,8 +3,10 @@ layout: layouts/home.njk
 ---
 
 <header>
+  <div style-"display:flex">
 <div class="h_score">
   <h1 id="result"></h1>
+  </div>
 </div>
 <div class="h_check">
   <button id="button" disabled>Check</button>
