--- a/index.njk
+++ b/index.njk
@@ -3,7 +3,7 @@ layout: layouts/home.njk
 ---
 
 <header>
-  <div style-"display:flex">
+  <div style-"display:flex;  flex-wrap: wrap;">
 <div class="h_score">
   <h1 id="result"></h1>
 </div>
