--- a/index.njk
+++ b/index.njk
@@ -3,7 +3,7 @@ layout: layouts/home.njk
 ---
 
 <header>
-  <div style-"display:flex;  flex-wrap: wrap;">
+  <div style-"display:flex;">
 <div class="h_score">
   <h1 id="result"></h1>
 </div>
@@ -13,7 +13,7 @@ layout: layouts/home.njk
 </div>
 </header>
 
-<form id="records" style="display:flex;"></div>
+<form id="records" style="display:flex;flex-wrap: wrap;"></div>
 
 <!--
 <form>
