--- a/css/index.css
+++ b/css/index.css
@@ -81,7 +81,8 @@ main :first-child {
 }
 
 .flex20 {
-  flex-basis: 20%;
+  display: flex;
+  flex-basis: 15%;
   align-items: center;
   justify-content: center;
 }
